--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "page": "^1.11.6",
     "sirv-cli": "^1.0.0",
+    "socket.io-client": "^4.1.1",
     "svelte-color-picker": "^1.0.7"
   }
 }
